server/deploy/k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: insightface
  labels:
    istio-injection: enabled
