server/deploy/k8s/30-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: insightface-server
  namespace: insightface
  labels:
    app: insightface-server
spec:
  selector:
    app: insightface-server
  ports:
    - name: http
      port: 8080
      targetPort: http
